--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
             </div>
             <a href="#" class="btn-box">More About Me</a>
         </div>
+        <div>
+            <img src="portfolio88.jdg" alt="photo" width="250px">
+        </div>
     </section>
 </body>
 </html>
