--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             </div>
             <a href="#" class="btn-box">More About Me</a>
         </div>
-        <div>
-            <img src="portfolio88.jdg" alt="photo" width="250px">
+        <div class="imgg">
+            <img src="portfolio88.jpg" alt="photo" width="250px">
         </div>
     </section>
 </body>
