--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a href="#" class="btn-box">More About Me</a>
         </div>
         <div class="imgg">
-            <img src="portfolio22.jpg" alt="photo" width="250px">
+            <img src="portfolio22.png" alt="photo" width="250px">
         </div>
     </section>
 </body>
